name:                ddp-server
version:             0.1.0.0
synopsis:            A library for writing DDP-capable servers
-- description:
homepage:            https://github.com/githubuser/ddp-server#readme
license:             BSD3
license-file:        LICENSE
author:              Maciej Bielecki
maintainer:          maciej.bielecki@prati.pl
copyright:           2017 Maciej Bielecki
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  OverloadedStrings
                       LambdaCase
                       NamedFieldPuns

  ghc-options:         -Wincomplete-patterns

  exposed-modules:     Network.DDP.Server
                       Network.DDP.Protocol

  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , template-haskell
                     , unordered-containers
                     , hashable
                     , stm
